[package]
name = "bc_exch_api_funcs"
version = "0.1.7"
edition = "2024"

[dependencies]
bc_utils_core ={ path = "../bc_utils_core" }
bc_utils_lg ={ path = "../bc_utils_lg" }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde ={ version = "1.0", features = ["derive"]}
serde_json5 = "0.1"
futures = "0.3"
chrono = "0.4"

[dev-dependencies]
criterion = {version = "0.3.5", features = ["html_reports", "async_tokio"]}
# fix
bc_constructor ={ path = "../bc_constructor" }

[[bench]]
name = "klines_bybit"
path = "benches/bybit/market/klines.rs"
harness = false

[[bench]]
name = "instr_info_bybit"
path = "benches/bybit/market/instr_info.rs"
harness = false

[[bench]]
name = "symbols_bybit"
path = "benches/bybit/market/symbols.rs"
harness = false

[[bench]]
name = "orderbook_bybit"
path = "benches/bybit/market/orderbook.rs"
harness = false

[[bench]]
name = "oi_bybit"
path = "benches/bybit/market/oi.rs"
harness = false

[[bench]]
name = "acc_info_bybit"
path = "benches/bybit/account/acc_info.rs"
harness = false

[[bench]]
name = "wallet_balance_bybit"
path = "benches/bybit/account/wallet_balance.rs"
harness = false
